# OOP_lab1

./: CMakeLists.txt  README  main.cpp  tests.cpp  turkification.cpp  turkification.h
